--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.1",
+    "react-native-date-picker": "^5.0.11",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
